# backEnd-garageDjango

./: .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garage/: admin.py  models.py  serializers.py  views.py
garage/migrations/: 0001_initial.py  0002_car_description.py  0002_category.py  0002_remove_car_brand.py  0003_alter_brand_options_alter_category_options.py  0003_remove_car_accessories.py  0004_car.py  0004_car_accessories.py  0005_acessory.py  0005_remove_car_category.py  0006_delete_acessory.py  0007_accessory.py  0008_color_alter_car_color.py  0009_alter_car_price.py  0010_car_accessories.py  0011_car_image.py  0012_alter_car_image.py
garage/models/: __init__.py  accessory.py  brand.py  car.py  category.py  color.py  model.py
garage/serializers/: __init__.py  accessory.py  brand.py  car.py  category.py  color.py  model.py
garage/views/: __init__.py  accessory.py  brand.py  car.py  category.py  color.py  model.py
uploader/migrations/: 0001_initial.py
user/migrations/: 0001_initial.py
utils/: files.py
