
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Augusto Balsanelli", email = "augustebalsanel@proton.me"},
]
dependencies = [
    "django>=4.2.2",
    "djangorestframework>=3.14.0",
    "setuptools>=68.1.2",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
    "drf-spectacular>=0.26.4",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
